<resources>
    <string name="app_name">SkinOry</string>
    <string name="title_home">Home</string>
    <string name="title_article">Article</string>
    <string name="title_result">Result</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="to_register">Does\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_register_page">Fill all form to create an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Fill your data below</string>
    <string name="title_login_page">Ready to make a story?</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading…</string>
    <string name="title_gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="analysis">Analysis</string>
    <string name="face_wash">Face Wash</string>
    <string name="select">Select</string>
    <string name="sunscreen">Sunscreen</string>
    <string name="moisturizer">Moisturizer</string>
    <string name="toner">Toner</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="empty">Empty</string>
    <string name="hello_username">Hello %1$s!</string>
    <string name="skin_type_result">According to our model your skin type is %1$s.</string>
    <string name="greed_main">How are you today?</string>
    <string name="or">OR</string>
    <string name="btntv_seemore">Seemore</string>
    <string name="done">Done</string>
    <string name="info_warning">If there any miss information consider take another picture</string>
    <string name="btn_result">My Result</string>
    <string name="btn_picture">My Picture</string>
    <string name="title_category">Product Category</string>
    <string name="title_best_name">Product long name</string>
    <string name="title_price">Price</string>
    <string name="title_rating">Rating</string>
    <string name="title_time">Usage Time</string>
    <string name="info_notification">To activate the notification turn on the switch button.</string>
    <string name="title_switch">Notifications (Day and Night)</string>
    <string name="title_chose">Please choose time schedule.</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="info_note_select">Note: Clicking item product will automatically save it</string>
    <string name="reset_password">Reset Password</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="try_again">Try Again</string>
    <string name="info_analysis">Select an image from the gallery or camera</string>
    <string name="info_result">note: clickable items</string>
</resources>