<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.chose.ChoseActivity">

    <TextView
        android:id="@+id/titleChose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:textSize="21sp"
        android:text="@string/title_chose"
        android:fontFamily="@font/nunito_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDay"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/day"
        android:background="@drawable/round_btn"
        app:layout_constraintEnd_toEndOf="@+id/titleChose"
        app:layout_constraintStart_toStartOf="@+id/titleChose"
        app:layout_constraintTop_toBottomOf="@+id/titleChose" />

    <TextView
        android:id="@+id/ORDevider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/or"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/btnDay"
        app:layout_constraintStart_toStartOf="@+id/btnDay"
        app:layout_constraintTop_toBottomOf="@+id/btnDay" />

    <Button
        android:id="@+id/btnNight"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/night"
        android:background="@drawable/round_btn"
        app:layout_constraintEnd_toEndOf="@+id/btnDay"
        app:layout_constraintStart_toStartOf="@+id/btnDay"
        app:layout_constraintTop_toBottomOf="@+id/ORDevider" />
</androidx.constraintlayout.widget.ConstraintLayout>