<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.analysis.AnalysisActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/imgUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_insert_photo_24"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_gallery"
            android:background="@drawable/round_btn"
            app:layout_constraintEnd_toStartOf="@+id/btnCamera"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imgUpload"
            app:layout_constraintTop_toBottomOf="@+id/imgUpload" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/camera"
            android:background="@drawable/round_btn"
            app:layout_constraintEnd_toEndOf="@+id/imgUpload"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnGallery"
            app:layout_constraintTop_toBottomOf="@+id/imgUpload" />

        <Button
            android:id="@+id/btnAnalysis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/analysis"
            android:background="@drawable/round_btn"
            app:layout_constraintEnd_toEndOf="@+id/btnCamera"
            app:layout_constraintStart_toStartOf="@+id/btnGallery"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="504dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>